[package]
name = "graffiti"
version = "0.1.0"
authors = ["thatlittlegit <personal@thatlittlegit.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = "0.13"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
env_logger = "0.7.1"
anyhow = "1"
url = "2"
lazy_static = "1"
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
serde = "1"
serde_derive = "1"
